# jncep_webui

./: .gitignore  Dockerfile  app.py  compose.yml  docker steps.md  docker steps.txt  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-publish.yml
src/jncep_webui/: __init__.py  __main__.py  app.py  logger_setup.py
src/jncep_webui/static/css/: main.css
src/jncep_webui/templates/: Homepage.html
templates/: Homepage.html
